@@ -1,3 +1,7 @@
+2003-10-09 Craig Franklin <craigfranklin@comcast.net>
+  * Allow gplink to parse linker scripts with missing newlines before the 
+    EOF.
+
 2003-10-08 Craig Franklin <craigfranklin@comcast.net>
   * Fixed an initialization problem that causes a segfault when the first
     line has a parse error.
